# inclusion_dataset

./: .env.example  .gitignore  CONTRIBUTING.md  Pipfile  README.md  pyproject.toml  requirements.txt
docs/: requirements.txt
scripts/: dry_run.py  test_structure.py
src/inclusion_dataset/: __init__.py
src/inclusion_dataset/config/: __init__.py  bias_types.py  constants.py  domains.py  settings.py
src/inclusion_dataset/pipeline/: __init__.py  content_generator.py  instruction_generator.py  main.py
src/inclusion_dataset/utils/: __init__.py  logging_setup.py
src/inclusion_dataset/validators/: __init__.py  diversity_metrics.py  exceptions.py  pattern_extractor.py  pragmatic_analyzer.py  quality_judge.py  semantic_analyzer.py  template_detector.py
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_validators.py
